--- a/grc338/redesign-content-hierarchy/catering.html
+++ b/grc338/redesign-content-hierarchy/catering.html
@@ -19,17 +19,29 @@
                     <li><a href="catering.html">Catering</a></li>
                 </ul>
             </div>
+    
             <a href="index.html"><img src="images/bontempslogo.png" alt="Bon Temps Creole Cafe Logo"></a>
             <h1>Central California's Finest Creole Restaurant Since 1995</h1>
 		</header>	
     
     	<div class="maincontent">
-            <img src="images/restaurant.png" alt="The Bon Temps Creole Cafe storefront.">
-            <p>1819 Osos Street<br>
-                San Luis Obispo<br>
-                California<br>
-                93401</p>
-            <p>(805) 544-2100</p>
+
+        <h2>Catering</h2>
+        <p>Bon Temps offers a wide range of catering services for:</p>
+        <ul>
+            <li>Weddings</li>
+            <li>Anniversaries</li>
+            <li>Corporate Meetings</li>
+            <li>Festivals</li>
+            <li>Retirement Parties</li>
+            <li>Mardi Gras Parties</li>
+            <li>Crawfish Boils</li>
+            <li>Barbecues</li>
+        </ul>
+            <p>We can accommodate parties up to 400 people and can provide non-Creole menu items as well.
+                Prices range from $15.00 to $28.00 per person.
+                Please contact us to set up your perfect party or function.</p>
+
         </div><!--maincontent-->
 
         <footer>    
