--- a/grc338/redesign-mobile-first/catering.html
+++ b/grc338/redesign-mobile-first/catering.html
@@ -20,15 +20,24 @@
                     <li><a href="catering.html">Catering</a></li>
                 </ul>
             </div>
-		</header>	
+        </header>	
     
     	<div class="maincontent">
-            <img src="images/bontempsneonsign.jpg" alt="The Bon Temps Creole Cafe neon sign.">
-            <p class="contact">1819 Osos Street<br>
-                San Luis Obispo<br>
-                California<br>
-                93401</p>
-            <p class="contact">(805) 544-2100</p>
+            <h1>Catering</h1>
+            <p>Bon Temps offers a wide range of catering services for:</p>
+            <ul>
+                <li>Weddings</li>
+                <li>Anniversaries</li>
+                <li>Corporate Meetings</li>
+                <li>Festivals</li>
+                <li>Retirement Parties</li>
+                <li>Mardi Gras Parties</li>
+                <li>Crawfish Boils</li>
+                <li>Barbecues</li>
+            </ul>
+                <p>We can accommodate parties up to 400 people and can provide non-Creole menu items as well.
+                    Prices range from $15.00 to $28.00 per person.
+                    Please <a href="about.html">contact us</a> to set up your perfect party or function.</p>
         </div><!--maincontent-->
 
         <footer>    
