--- a/grc338/redesign-mobile-first/about.html
+++ b/grc338/redesign-mobile-first/about.html
@@ -24,34 +24,29 @@
     
     	<div class="maincontent">
             <h1>About Us</h1>
+            <img src="images/bontempsinterior.jpg" alt="The interior of the Bon Temps Creole Cafe establishment.">
             <p>Bon Temps Cafe has been the home of Southern hospitality and fine Cajun cuisine on the Central Coast since 1995.
                 Come join us across from the railroad station in San Luis-iana!</p>
             <p>Owner Phil Lang invites you to treat your taste buds to a truly unique experience.</p>
-            <img src="images/bontempsinterior.jpg" alt="The interior of the Bon Temps Creole Cafe establishment.">
             <p>The atmosphere at Bon Temps is casual and comfortable, tempting you to return time and again.</p>
-            <p>When the weather's nice, there's no better place to enjoy a great meal and a glass of wine than on the patio.</p>
-            <p>Try the Fat Tuesday Omelet for breakfast, or a ca`tfish po-boy for lunch, but don’t miss the Crawfish Etouffee,
-                Shrimp and Andouille Jambalaya, or the house specialty, Genuine Seafood Gumbo. You’ll find it hard to decide
-                on one thing. Maybe that's why we have so many regulars.</p>
-            <p>The wonderful aromas of true southern cooking will make you believe you’re in New Orleans.
+            <p>When the weather&rsquo;s nice, there&rsquo;s no better place to enjoy a great meal and a glass of wine than on the patio.</p>
+            <p>Try the Fat Tuesday Omelet for breakfast, or a catfish po-boy for lunch, but don&rsquo;t miss the Crawfish Etouffee,
+                Shrimp and Andouille Jambalaya, or the house specialty, Genuine Seafood Gumbo. You&rsquo;ll find it hard to decide
+                on one thing. Maybe that&rsquo;s why we have so many regulars.</p>
+            <p>The wonderful aromas of true southern cooking will make you believe you&rsquo;re in New Orleans.
                 If Phil (not pictured at left) is there (and in a good mood), he might even share one of his cooking secrets.
-                If not, ask one of the waitresses (also not pictured at left). They’re always nice.
+                If not, ask one of the waitresses (also not pictured at left). They&rsquo;re always nice.
                 So is his wife Julie, holding a pie at right.</p>
-            <p>When you are looking for something out of the ordinary to eat without having to make the trip to the “Big Easy”,
+            <p>When you are looking for something out of the ordinary to eat without having to make the trip to the &ldquo;Big Easy&rdquo;,
                 join us at the Bon Temps and... Laissez Bon Temps Rouler! Let The Good Times Roll!</p>
             <h3>Come talk to us!</h3>
-            <div class="contactinfo">
                 <p>1819 Osos Street<br>
                     San Luis Obispo<br>
                     California<br>
                     93401</p>
                 <p>(805) 544-2100</p>
-                <a href="mailto:bontempsphil@yahoo.com">bontempsphil@yahoo.com</a>          
-            </div>
+            <p><a href="mailto:bontempsphil@yahoo.com">bontempsphil@yahoo.com</a></p>
         </div><!--maincontent-->
-
-        <footer>    
-        </footer>  
 
 </div><!--container-->
 </body>    
