--- a/grc338/redesign-mobile-first/catering.html
+++ b/grc338/redesign-mobile-first/catering.html
@@ -26,6 +26,7 @@
             <h1>Catering</h1>
             <p>Bon Temps offers a wide range of catering services for:</p>
             <ul>
+                <p>
                 <li>Weddings</li>
                 <li>Anniversaries</li>
                 <li>Corporate Meetings</li>
@@ -34,14 +35,10 @@
                 <li>Mardi Gras Parties</li>
                 <li>Crawfish Boils</li>
                 <li>Barbecues</li>
+                </p>
             </ul>
-                <p>We can accommodate parties up to 400 people and can provide non-Creole menu items as well.
-                    Prices range from $15.00 to $28.00 per person.
-                    Please <a href="about.html">contact us</a> to set up your perfect party or function.</p>
+                <p>We can accommodate parties up to 400 people and can provide non-Creole menu items as well. Prices range from $15.00 to $28.00 per person. Please <a href="about.html">contact us</a> to set up your perfect party or function.</p>
         </div><!--maincontent-->
-
-        <footer>    
-        </footer>  
 
 </div><!--container-->
 </body>    
