--- a/grc338/redesign-final/about.html
+++ b/grc338/redesign-final/about.html
@@ -24,19 +24,21 @@
     
     	<div class="maincontent">
             <h1>About Us</h1>
-            <h3>Come talk to us!</h3>
+    <div class="contact">
+    <h3>Come talk to us!</h3>
             <p>1819 Osos Street<br>
                     San Luis Obispo<br>
                     California<br>
                     93401</p>
-                <p>(805) 544-2100</p>
+            <p>(805) 544-2100</p>
             <p><a href="mailto:bontempsphil@yahoo.com">bontempsphil@yahoo.com</a></p>
             <h3>Hours</h3>
             <h4>Breakfast</h4>
             <p>Daily: 7am &ndash; 2pm</p>
             <h4>Lunch</h4>
-            <p>Monday &ndash; Friday: 11am &ndash; 2pm</p>
-            <p>Saturday &amp; Sunday: 12pm &ndash; 2om</p>            
+            <p>Monday &ndash; Friday: 11am &ndash; 2pm<br>
+                Saturday &amp; Sunday: 12pm &ndash; 2om</p>            
+    </div>
 
             <img src="images/bontempsinterior.jpg" alt="The interior of the Bon Temps Creole Cafe establishment.">
             <p>Bon Temps Cafe has been the home of Southern hospitality and fine Cajun cuisine on the Central Coast since 1995.
