--- a/grc338/redesign-final/catering.html
+++ b/grc338/redesign-final/catering.html
@@ -25,8 +25,7 @@
     	<div class="maincontent">
             <h1>Catering</h1>
             <p>Bon Temps offers a wide range of catering services for:</p>
-            <ul>
-                <p>
+            <ul class="cateringservices">
                 <li>Weddings</li>
                 <li>Anniversaries</li>
                 <li>Corporate Meetings</li>
@@ -35,7 +34,6 @@
                 <li>Mardi Gras Parties</li>
                 <li>Crawfish Boils</li>
                 <li>Barbecues</li>
-                </p>
             </ul>
                 <p>We can accommodate parties up to 400 people and can provide non-Creole menu items as well. Prices range from $15.00 to $28.00 per person. Please <a href="about.html">contact us</a> to set up your perfect party or function.</p>
         </div><!--maincontent-->
