--- a/grc338/redesign-final/index.html
+++ b/grc338/redesign-final/index.html
@@ -20,8 +20,30 @@
                     <li><a href="catering.html">Catering</a></li>
                 </ul>
             </div>
-		</header>	
-        <img src="images/bontempsbreakfastandchampagne.jpg" alt="The Bon Temps Creole Cafe neon sign.">
+		</header>
+<div class="maincontent">
+    <div class="homepage">
+    <h3><em>Bien Venu!</em> Welcome To San Luis-iana!</h3>   
+    <h3><em>Laissez le bon temps roulez!</em> Let the good times roll!</h3>
+    <p>For daily specials and coupon offers, see our <a href="https://www.facebook.com/BonTempsCafe">Facebook page</a>.</p>
+    </div>
+</div>
+    <img src="images/shrimpdish.jpg" alt="The Bon Temps Creole Cafe neon sign.">        
+    <div class="contact">
+    <h3>Come talk to us!</h3>
+            <p>1819 Osos Street<br>
+                    San Luis Obispo<br>
+                    California<br>
+                    93401</p>
+            <p>(805) 544-2100</p>
+            <p><a href="mailto:bontempsphil@yahoo.com">bontempsphil@yahoo.com</a></p>
+            <h3>Hours</h3>
+            <h4>Breakfast</h4>
+            <p>Daily: 7am &ndash; 2pm</p>
+            <h4>Lunch</h4>
+            <p>Monday &ndash; Friday: 11am &ndash; 2pm<br>
+                Saturday &amp; Sunday: 12pm &ndash; 2om</p>            
+    </div>
 
 </div><!--container-->
 </body>    
