--- a/grc338/final/index.html
+++ b/grc338/final/index.html
@@ -2,7 +2,7 @@
 
     <html>  
     <head>  
-    <title>Untitled</title>  
+    <title>Josie Grundler Final</title>  
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">  
     <meta http-equiv="refresh" content="0;url=https://calpoly.edu/">  
     </head>
