--- a/grc338/final/index.html
+++ b/grc338/final/index.html
@@ -4,7 +4,7 @@
     <head>  
     <title>Josie Grundler Final</title>  
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">  
-    <meta http-equiv="refresh" content="0;url=https://calpoly.edu/">  
+    <meta http-equiv="refresh" content="0;url=https://heron-olive-zfay.squarespace.com/">  
     </head>
 
     <body>
