--- a/grc339/firstwebsite/index.html
+++ b/grc339/firstwebsite/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+   <link rel="stylesheet" type="text/css" href="css/main.css">
+      
+    <title>Josie's Website</title>
+  <meta name="author" content="Josie">
+  <meta name="description" content="Website">
+  
+  <meta name="keywords" content="keywords,here">
+
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.1/css/all.css">
+  <link rel="stylesheet" href="css/main.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
+  </head>
+  
+  <body>
+  
+<section class="hero">
+  <div class="inner-hero">
+    <h1>Shelter In Place</h1>
+      <h3>Josie&rsquo;s Survival Guide</h3>
+      <h3><a href="home.html">Enter</a></h3>
+  </div>   
+      </section>
+ <script src="js/scripts.js"></script>
+  </body>
+
+</html>
 
