--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link href="https://use.typekit.net/fub5vhe.css" rel="stylesheet">
         
-        <title>Josie Grundler</title>
+        <title>Josie Grundler | Portfolio</title>
     </head>
 
     <body>      
@@ -27,11 +27,26 @@
             </nav>
         </header>
 
-        <div class="container">
-            <h1>Welcome</h1>
-            <h2>to my personal portfolio.</h2>
-            <p>This website contains my resume, some information design projects, a gallery of some of my art, and my contact information.</p>
+        <div class="cards">
+            <div class="card">
+                <div class="photo"><a href="images/healthcare.png" target="_blank"><img src="images/healthcarethumbnail.png" alt="alt." /></a></div>
+                <article class="cardarticle">
+                    <h2>Simple Infographic</h2>
+                    <p>This infographic was created to show.</p>
+                    <a class="cardarticle" href="images/healthcare.png" target="_blank">See the whole image!</a>
+                </article>
+            </div>
+
+            <div class="card">
+                <div class="photo"><a href="images/theamericandream.pdf" target="_blank"><img src="images/americandreamthumbnail.png"  alt="alt." /></a></div>
+                <article class="cardarticle">
+                    <h2>Complex Infographic</h2>
+                    <p>This infographic.</p>
+                    <a class="cardarticle" href="images/theamericandream.pdf" target="_blank">See the whole image!</a>
+                </article>
+            </div>
         </div>
+        
     </body>
 
 </html>
