--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -29,7 +29,7 @@
                 <div class="photo"><a href="images/healthcare.png" target="_blank"><img src="images/healthcarethumbnail.png" alt="alt." /></a></div>
                 <article class="cardarticle">
                     <h2>Simple Infographic</h2>
-                    <p>This infographic was created to show.</p>
+                    <p>This infographic was created to compare countries by per capita health expenditures and certain data points related to quality of health care.</p>
                     <a class="cardarticle" href="images/healthcare.png" target="_blank">See the whole image!</a>
                 </article>
             </div>
@@ -38,7 +38,7 @@
                 <div class="photo"><a href="images/theamericandream.pdf" target="_blank"><img src="images/americandreamthumbnail.png"  alt="alt." /></a></div>
                 <article class="cardarticle">
                     <h2>Complex Infographic</h2>
-                    <p>This infographic.</p>
+                    <p>This infographic was created to analyze the American Dream: How the American reality compares to the dream and how that has changed over time.</p>
                     <a class="cardarticle" href="images/theamericandream.pdf" target="_blank">See the whole image!</a>
                 </article>
             </div>
