--- a/grc339/finalwebsite/food.html
+++ b/grc339/finalwebsite/food.html
@@ -40,6 +40,7 @@
             </nav>
         </header>
         
+        <!-- main content — food -->
         <h1>Food!</h1>
         <section class="gallery">
             <div class="one"><img src="images/latte.jpg" alt="Top view of a latte with a leaf pattern in the foam."></div>
