--- a/grc339/finalwebsite/index.html
+++ b/grc339/finalwebsite/index.html
@@ -50,6 +50,7 @@
                 </nav>
             </header>
 
+            <!-- main content — home -->
             <h1>Home</h1>
             <div class="cards">
                 <div class="card">
