--- a/grc339/finalwebsite/remy.html
+++ b/grc339/finalwebsite/remy.html
@@ -40,6 +40,7 @@
             </nav>
         </header>
 
+        <!-- main content — remy -->
         <h1>Meet Remy!</h1>
         <section class="gallery">
             <div class="outer five">
