remove broken link

--- a/grc339/finalwebsite/index.html
+++ b/grc339/finalwebsite/index.html
@@ -71,7 +71,7 @@
                     <div class="photo"><img src="images/minicanvaspaintings.jpg" alt="Mini-canvas painting of otters on a mini-easel with a second painting and art supplies." /></div>
                     <article class="cardarticle"><h2>Art Projects</h2>
                         <p>I've worked on a few art projects, primarily in acrylic paint and graphite, but also watercolor, ink, graphic design, and a lot of hair dye.</p></article>
-                    <footer class="cardfooter"><a href="home.html">See more art</a></footer>
+                    <footer class="cardfooter"><a href="">See more art</a></footer>
                 </div>
             </div>
         </section>
