--- a/seniorproject/index.html
+++ b/seniorproject/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link href="https://use.typekit.net/fub5vhe.css" rel="stylesheet">
+        
+        <title>Josie Grundler</title>
+    </head>
+</html>
