--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,20 +14,24 @@
         
         <header>
             <nav class="flex-container" aria-labelledby="primary-navigation">
-                <h1 class="logo"><a class="logo"href="index.html">josie grundler</a></h1>
+                <a href="index.html">
+                    <img class="logo" alt="lowercase j and g in a script typeface" src="images/jgscript.png">
+                    </a>
                 <ul class="main-nav">
-                    <li><a href="files/josie-grundler-resume.pdf" target="_blank">Resume</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="https://photos.app.goo.gl/TmCv89TzOqp9FdrB3" target="_blank">Art</a></li>
-                    <li><a href="mailto:jagrundler@gmail.com">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="experience.html">Experience</a></li>
+                    <li><a href="sidequests.html">Sidequests</a></li>
                 </ul>
             </nav>
         </header>
 
         <div class="container">
-            <h1>Welcome</h1>
-            <h2>to my personal portfolio.</h2>
-            <p>This website contains my resume, some information design projects, a gallery of some of my art, and my contact information.</p>
+            <h1><span class="script">Hello!</span></h1>
+            <h2>I'm a designer and aspiring Good Human</h2>
+            <p>I love the creative and iterative process of making products &amp; experiences optimally accessible, functional, and simplistically elegant.</p>
+            <p>If you want to learn more about my background, visit the <a href="about.html">about</a> page.</p>
+            <P>To determine my qualifications (please hire me :D), take a look at my&nbsp;<a href="experience.html">experience</a>.</P>
+            <P>For a fun(?) detour, explore my <a href="sidequests.html">sidequests</a>.</P>
         </div>
     </body>
 
