--- a/portfolio/firefighterarproject.html
+++ b/portfolio/firefighterarproject.html
@@ -31,13 +31,13 @@
             <p>This 10 week project required our group to find an AR based solution to a problem faced by professionals in our chosen domain (teachers, nurses, etc.). After choosing firefighters, our group met weekly to go through the process of developing the concept for AR goggles and a corresponding app designed to enhance firefighter preparedness for crises.</p>
             <h3>Individual contributions</h3>
             <ul class="list-block">
-                <li>drawings and text for scenarios</li>
-                <li>led the interview process</li>
-                <li>wrote some sections of the design principles analysis</li>
-                <li>collaborated on interaction framework drawings and text</li>
-                <li>performed majority of the usability analysis</li>
-                <li>wrote ethical considerations and future enhancements</li>
-                <li>collaborated on user interface design and corresponding annotated layouts</li>
+                <li><p>drawings and text for scenarios</p></li>
+                <li><p>led the interview process</p></li>
+                <li><p>wrote some sections of the design principles analysis</p></li>
+                <li><p>collaborated on interaction framework drawings and text</p></li>
+                <li><p>performed majority of the usability analysis</p></li>
+                <li><p>wrote ethical considerations and future enhancements</p></li>
+                <li><p>collaborated on user interface design and corresponding annotated layouts</p></li>
             </ul>
             <p><a class="button" href="files/FirefighterARtrainingProjectReport.pdf" target="_blank">View Report</a></p>
         </div>
