adding exp & sidequests

--- a/portfolio/shelterinplace.html
+++ b/portfolio/shelterinplace.html
@@ -26,18 +26,12 @@
         </header>
 
         <div class="container">
-            <h1>About me</h1>
-            <p>My name is Josie and I graduated from Cal Poly SLO in 2020 with a Bachelor's degree in Liberal Arts &amp; Engineering Studies (LAES).</p>
-            <p>The LAES program allowed me to create my own UI/UX design concentration by handpicking relevant courses in Computer Science and Graphic Communication.</p>
-            <p>I love creative problem solving and developing systems that set people up for success.</p>
-            <h2>some lil extras</h2>
-            <ul>
-            <li><p>peep my recent-ish <a class="link" href="files/GrundlerResume.pdf" target="_blank">resume</a></p></li>
-            <li><p><a class="link" href="mailto:jagrundler@gmail.com">email</a> me :D</p></li>
-            <li><p>connect with me on <a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank">LinkedIn</a></p></li>
-            </ul>
+            <h1>Shelter in Place Website</h1>
+            <h2>Seven week website creation project</h2>
+            <p>This project was assigned at the start of the pandemic. We were to create a “Shelter in Place” website that demonstrated what we were up to while staying home. Each week involved learning new skills via minor assignments, ultimately incorporating those features into our designs, and updating them on GitHub. The goal of the course was to familiarize ourselves with HTML, CSS, and JS; particularly, to hone &amp; solidify knowledge from previous quarters.</p>
+            <p><a class="button" href="https://jagrundler.github.io/grc339/finalwebsite" target="_blank">View website</a>
+            <a class="button" href="https://github.com/jagrundler/jagrundler.github.io/tree/master/grc339/finalwebsite" target="_blank">View code</a></p>
         </div>
-        
     </body>
 
 </html>
