--- a/portfolio/sidequests.html
+++ b/portfolio/sidequests.html
@@ -27,7 +27,130 @@
 
         <div class="container">
             <h1>Sidequests</h1>
-            <h2>coming soon!</h2>
+            <p class="preview">This page is totally for showing my diverse skill sets and not so I can justify starting yet another hobby :D</p>
+                <h2 class="preview">Commissioned art</h2>
+            <p>Just trying to give the people what they want :')</p>
+                <div class="previews">
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/aXraXJ4EnppUm8PZ6" target="_blank">
+                            <img alt=" " src="images/tattoodesignthumbnail.jpg">
+                            <div class="card-text">
+                                <h2>Tattoo design</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="images/portrait2commission.jpg" target="_blank">
+                            <img alt=" " src="images/portrait2commission.jpg">
+                            <div class="card-text">
+                                <h2>Portrait commission</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="images/portraitcommission.jpg" target="_blank">
+                            <img alt=" " src="images/portraitcommission.jpg">
+                            <div class="card-text">
+                                <h2>Portrait commission</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="images/horsecommission.jpg" target="_blank">
+                            <img alt=" " src="images/horsecommission.jpg">
+                            <div class="card-text">
+                                <h2>Horse commission</h2></div></a>
+                    </div>
+
+                </div>
+                <h2 class="preview">Drawings' progressions</h2>
+                    <p class="preview">When I moved out for college, my mom told me she missed me doing art at the kitchen table and seeing the progress. I started making albums with hourly(ish) pictures of my work to share with her. These have been surprisingly helpful for me, as they remind me to worry less about how infinitely far away "done" feels and focus more on iteration and trusting my process.</p>
+                <div class="previews">
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/u1yFTEXZer46KV2YA" target="_blank">
+                            <img alt=" " src="images/snowleoparddoodle.jpg">
+                            <div class="card-text">
+                                <h2>Snow Leopard Doodle</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/SA2HvZzJw5fHAeai6" target="_blank">
+                            <img alt=" " src="images/goldenlabsketch.jpg">
+                            <div class="card-text">
+                                <h2>Golden Lab Sketch</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/LXwm9dJLAVx1i1oaA" target="_blank">
+                            <img alt=" " src="images/portrait2commission.jpg">
+                            <div class="card-text">
+                                <h2>Portrait Commission</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/vA5oWCqTJxz7kway7" target="_blank">
+                            <img alt=" " src="images/watercolorgraphite.jpg">
+                            <div class="card-text">
+                                <h2>Watercolor &amp; graphite</h2></div></a>
+                    </div>
+                </div>
+            <h2 class="preview">Favorite Media</h2>
+            <p class="preview">The following links will take you to albums with some of my favorite pieces done in the media I have the most experiences with.</p>
+                <div class="previews">
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/TAmiyFwQDUgB9bPPA" target="_blank">
+                            <img alt=" " src="images/graphite.jpg">
+                            <div class="card-text">
+                                <h2>Graphite</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/wkbuY1Z4sz3W3v1XA" target="_blank">
+                            <img alt=" " src="images/ballpointpen.jpg">
+                            <div class="card-text">
+                                <h2>Ball point pen</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/hWiAXHsoKzvYHanz9" target="_blank">
+                            <img alt=" " src="images/acrylicpaint.jpg">
+                            <div class="card-text">
+                                <h2>Acrylic paint</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/vA5oWCqTJxz7kway7" target="_blank">
+                            <img alt=" " src="images/watercolor.jpg">
+                            <div class="card-text">
+                                <h2>Watercolor</h2></div></a>
+                    </div>
+               </div>
+            <h2 class="preview">Information design</h2>
+                <p class="preview">The first two projects were completed in my Information Design class and the latter in Technical Writing.</p>
+                <div class="previews">
+                    <div class="card">
+                        <a href="files/theamericandream.pdf" target="_blank">
+                            <img alt="" src="images/americandreamthumbnail.png">
+                            <div class="card-text">
+                                <h2>The American Dream</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="images/healthcare.png" target="_blank">
+                            <img alt="" src="images/healthcare.png">
+                            <div class="card-text">
+                                <h2>Health Care</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="files/AdvancedRailEnergyStorage.pdf" target="_blank">
+                            <img alt="" src="images/extendeddefinition.png">
+                            <div class="card-text">
+                                <h2>Extended Definition</h2></div></a>
+                    </div>
+                </div>
+            <h2 class="preview">Gettin' Crafty</h2>
+            <p class="preview">In case it wasn't already extemely obvious that I'm incredibly dorky, kindly peep this final nail in the coffin :D</p>
+                <div class="previews">
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/W2oMCXhDfs3kAqfw6" target="_blank">
+                            <img alt="" src="images/nailart.jpg">
+                            <div class="card-text">
+                                <h2>Nail art</h2></div></a>
+                    </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/yCTyAZ8zyrf8mq1j6" target="_blank">
+                            <img alt="" src="images/crafts.jpg">
+                            <div class="card-text">
+                                <h2>Misc Crafts</h2></div></a>
+                    </div>
+                </div>
         </div>
     </body>
 
