--- a/portfolio/webaccessibility.html
+++ b/portfolio/webaccessibility.html
@@ -26,18 +26,13 @@
         </header>
 
         <div class="container">
-            <h1>About me</h1>
-            <p>My name is Josie and I graduated from Cal Poly SLO in 2020 with a Bachelor's degree in Liberal Arts &amp; Engineering Studies (LAES).</p>
-            <p>The LAES program allowed me to create my own UI/UX design concentration by handpicking relevant courses in Computer Science and Graphic Communication.</p>
-            <p>I love creative problem solving and developing systems that set people up for success.</p>
-            <h2>some lil extras</h2>
-            <ul>
-            <li><p>peep my recent-ish <a class="link" href="files/GrundlerResume.pdf" target="_blank">resume</a></p></li>
-            <li><p><a class="link" href="mailto:jagrundler@gmail.com">email</a> me :D</p></li>
-            <li><p>connect with me on <a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank">LinkedIn</a></p></li>
-            </ul>
+            <h1>Web Accessibility Project</h1>
+            <h2>designing &amp; prototyping a browser extension for improved visual web accessibility</h2>
+            <p>This quarter long group project was a part of the Cal Poly Human Computer Interaction course with Professor Franz Kurfess. Our team focused on the ways in which visual impairments affect the use of digital products, and researched existing laws &amp; tools that protect and expand accessibility. We sought to design a solution that would help build empathy for users as well as assess and improve accessibility.</p>
+            <p>This project was highly collaborative as demonstrated by the final report. My individual contributions included the preliminary research report and Figma prototype listed below.</p>
+            <p><a class="button" href="files/VisualAccessibilityOfWebsites-Research.pdf" target="_blank">Initial Research</a> <a class="button" href="files/VisualAccessibilityOfWebsites-FinalReport.pdf" target="_blank">Project Report</a>
+            <a class="button" href="https://www.figma.com/proto/YyehktB0NxdltIR5Bq7puYwD/Color-Companion" target="_blank">Figma Prototype</a></p>
         </div>
-        
     </body>
 
 </html>
