--- a/portfolio/websiteredesign.html
+++ b/portfolio/websiteredesign.html
@@ -26,18 +26,15 @@
         </header>
 
         <div class="container">
-            <h1>About me</h1>
-            <p>My name is Josie and I graduated from Cal Poly SLO in 2020 with a Bachelor's degree in Liberal Arts &amp; Engineering Studies (LAES).</p>
-            <p>The LAES program allowed me to create my own UI/UX design concentration by handpicking relevant courses in Computer Science and Graphic Communication.</p>
-            <p>I love creative problem solving and developing systems that set people up for success.</p>
-            <h2>some lil extras</h2>
-            <ul>
-            <li><p>peep my recent-ish <a class="link" href="files/GrundlerResume.pdf" target="_blank">resume</a></p></li>
-            <li><p><a class="link" href="mailto:jagrundler@gmail.com">email</a> me :D</p></li>
-            <li><p>connect with me on <a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank">LinkedIn</a></p></li>
-            </ul>
+            <h1>Website Redesign</h1>
+            <h2>Project to redesign &amp; code existing website</h2>
+            <p>While I’m not strictly speaking thrilled with the way this ended up looking, I really loved the process. I’m passionate about making products and experiences better, and as a fairly regular customer at the time, I was personally motivated to improve such a vital part of the restaurant's customer experience.</p>
+            <div class="compare">        
+                <div><img alt=" " src="images/bontempsoriginal.png"><h3>Original</h3></div>
+                <div><img alt=" " src="images/bontempsredesign.png"><h3>Redesign</h3></div></div>
+            <p><a class="button" href="https://jagrundler.github.io/grc338/redesign-final" target="_blank">View website</a>
+            <a class="button" href="https://github.com/jagrundler/jagrundler.github.io/tree/master/grc338/redesign-final" target="_blank">View code</a></p>
         </div>
-        
     </body>
 
 </html>
