--- a/portfolio/xploreproject.html
+++ b/portfolio/xploreproject.html
@@ -26,18 +26,24 @@
         </header>
 
         <div class="container">
-            <h1>About me</h1>
-            <p>My name is Josie and I graduated from Cal Poly SLO in 2020 with a Bachelor's degree in Liberal Arts &amp; Engineering Studies (LAES).</p>
-            <p>The LAES program allowed me to create my own UI/UX design concentration by handpicking relevant courses in Computer Science and Graphic Communication.</p>
-            <p>I love creative problem solving and developing systems that set people up for success.</p>
-            <h2>some lil extras</h2>
-            <ul>
-            <li><p>peep my recent-ish <a class="link" href="files/GrundlerResume.pdf" target="_blank">resume</a></p></li>
-            <li><p><a class="link" href="mailto:jagrundler@gmail.com">email</a> me :D</p></li>
-            <li><p>connect with me on <a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank">LinkedIn</a></p></li>
+            <h1>XPLORE Project</h1>
+            <h2>Led group project designing &amp; prototyping app for Cal Poly</h2>
+            <p>I had a hand in each aspect of the process because my delegation duties necessitated an understanding of what was going on, what needed to get done, and who was best suited to which roles &amp; contributions. We frequently had  to shift our approach to accommodate shifting product goals as directed by our superiors.</p>
+            <h3>Collaborative contributions</h3>
+            <ul class="list-block">
+                <li><p>bi-weekly summary of accomplishments</p></li>
+                <li><p>four separate sprint reports &amp; presentations</p></li>
+                <li><p>affinity diagramming</p></li>
+                <li><p>personas</p></li>
+                <li><p>user flows</p></li>
+                <li><p>participatory design workshops</p></li>
+                <li><p>storyboard concept testing</p></li>
+                <li><p>storyboard evaluations</p></li>
+                <li><p>two rounds of user testing.</p></li>
             </ul>
+
+            <p><a class="button" href="files/LogoDesignXPLORE.pdf" target="_blank">View project</a></p>
         </div>
-        
     </body>
 
 </html>
