--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -28,7 +28,7 @@
         <div class="container">
             <h1>Experience</h1>
             <h2>Here are some things I have done :D</h2>
-            <div class="cards">
+            <div class="box">
                 <div class="card">
                     <a href="slocore.html">
                         <img alt="SLO CORE preview and link to project page" src="images/slocorethumbnail.jpg">
@@ -52,8 +52,33 @@
                         <img alt="Bello Coffee menus preview and link to project page" src="images/bellothumbnail.jpg">
                         <div class="card-text">
                             <h2>Bello Coffee Menus</h2></div></a>
-
                 </div>
+                <div class="card">
+                    <a href="webaccessibility.html">
+                        <img alt="Preview of accessibility project's Figma prototype and link to project page" src="images/webaccessibilitythumbnail.png">
+                        <div class="card-text">
+                            <h2>Web Accessibility Project</h2></div></a>
+                </div>
+                <div class="card">
+                    <a href="shelterinplace.html">
+                        <img alt=" " src="images/shelterinplacethumbnail.png">
+                        <div class="card-text">
+                            <h2>Shelter in Place Website</h2></div></a>
+                </div>
+                <div class="card">
+                    <a href="websiteredesign.html">
+                        <img alt=" " src="images/bontempsredesign.png">
+                        <div class="card-text">
+                            <h2>Website Redesign</h2></div></a>
+                </div>
+                <div class="card">
+                    <a href="xploreproject.html">
+                        <img alt=" " src="images/xplorelogothumbnail.png">
+                        <div class="card-text">
+                            <h2>XPLORE Project</h2></div></a>
+                </div>
+
+
             </div>
         </div>
     </body>
