fixed link and typo

--- a/portfolio/sidequests.html
+++ b/portfolio/sidequests.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             <h2 class="preview">Favorite Media</h2>
-            <p class="preview">The following links will take you to albums with some of my favorite pieces done in the media I have the most experiences with.</p>
+            <p class="preview">The following links will take you to albums with some of my favorite pieces done in the media I have the most experience with.</p>
                 <div class="previews">
                     <div class="card">
                         <a href="https://photos.app.goo.gl/TAmiyFwQDUgB9bPPA" target="_blank">
@@ -107,7 +107,7 @@
                                 <h2>Acrylic paint</h2></div></a>
                     </div>
                     <div class="card">
-                        <a href="https://photos.app.goo.gl/vA5oWCqTJxz7kway7" target="_blank">
+                        <a href="https://photos.app.goo.gl/BjqfUwxNKCbRh8PHA" target="_blank">
                             <img alt=" " src="images/watercolor.jpg">
                             <div class="card-text">
                                 <h2>Watercolor</h2></div></a>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
             <h2 class="preview">Gettin' Crafty</h2>
-            <p class="preview">In case it wasn't already extemely obvious that I'm incredibly dorky, kindly peep this final nail in the coffin :D</p>
+            <p class="preview">In case it wasn't already extremely obvious that I'm incredibly dorky, kindly peep this final nail in the coffin :D</p>
                 <div class="previews">
                     <div class="card">
                         <a href="https://photos.app.goo.gl/W2oMCXhDfs3kAqfw6" target="_blank">
