--- a/portfolio/slocore.html
+++ b/portfolio/slocore.html
@@ -29,7 +29,7 @@
             <h1>SLO CORE</h1>
             <h2>Organization's website for senior project</h2>
             <p>For my senior project paper, I helped a budding organization create a website to help improve the accessibility of community resources.</p>
-            <p>The following report details the project from start finish, including an overview of the final product, the design &amp; development process the achieve said product, as well as desired future work given the opportunity.</p>
+            <p>The following report details the project from start  to finish, including an overview of the final product, the design &amp; development process to achieve said product, as well as desired future work given the opportunity.</p>
             <p><a class="button" href="files/GrundlerSLOCORE.pdf" target="_blank">View project</a></p>
         </div>
     </body>
