add ceramics pg

--- a/portfolio/sidequests.html
+++ b/portfolio/sidequests.html
@@ -150,6 +150,12 @@
                             <div class="card-text">
                                 <h2>Misc Crafts</h2></div></a>
                     </div>
+                    <div class="card">
+                        <a href="https://photos.app.goo.gl/LZjxBLWtoZd1bqHu8" target="_blank">
+                            <img alt="" src="images/ceramics.jpg">
+                            <div class="card-text">
+                                <h2>Ceramics</h2></div></a>
+                    </div>
                 </div>
         </div>
     </body>
