--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,8 @@
     <body>      
         
         <header>
-            <nav class="flex-container" aria-labelledby="primary-navigation">
+            <nav class="flex-container">
+                 <!--aria-labelledby="primary-navigation"-->
                 <a href="index.html">
                     <img class="logo" alt="lowercase j and g in a script typeface" src="images/jgscript.png">
                     </a>
