--- a/portfolio/sidequests.html
+++ b/portfolio/sidequests.html
@@ -33,25 +33,25 @@
                 <div class="previews">
                     <div class="card">
                         <a href="https://photos.app.goo.gl/aXraXJ4EnppUm8PZ6" target="_blank">
-                            <img alt=" " src="images/tattoodesignthumbnail.jpg">
+                            <img alt="Commissioned raphite drawing of a design for a bio-mechanical arm tattoo" src="images/tattoodesignthumbnail.jpg">
                             <div class="card-text">
                                 <h2>Tattoo design</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="images/portrait2commission.jpg" target="_blank">
-                            <img alt=" " src="images/portrait2commission.jpg">
+                            <img alt="Commissioned graphite drawing of a young girl" src="images/portrait2commission.jpg">
                             <div class="card-text">
                                 <h2>Portrait commission</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="images/portraitcommission.jpg" target="_blank">
-                            <img alt=" " src="images/portraitcommission.jpg">
+                            <img alt="Commissioned graphite drawing of a man" src="images/portraitcommission.jpg">
                             <div class="card-text">
                                 <h2>Portrait commission</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="images/horsecommission.jpg" target="_blank">
-                            <img alt=" " src="images/horsecommission.jpg">
+                            <img alt="Commissioned ball-point pen drawing of a horse ridden by a potato and a marshmallow" src="images/horsecommission.jpg">
                             <div class="card-text">
                                 <h2>Horse commission</h2></div></a>
                     </div>
@@ -62,25 +62,25 @@
                 <div class="previews">
                     <div class="card">
                         <a href="https://photos.app.goo.gl/u1yFTEXZer46KV2YA" target="_blank">
-                            <img alt=" " src="images/snowleoparddoodle.jpg">
+                            <img alt="Ink drawing of a snow leopard and its cub cuddling" src="images/snowleoparddoodle.jpg">
                             <div class="card-text">
                                 <h2>Snow Leopard Doodle</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/SA2HvZzJw5fHAeai6" target="_blank">
-                            <img alt=" " src="images/goldenlabsketch.jpg">
+                            <img alt="Ink drawing of a golden lab" src="images/goldenlabsketch.jpg">
                             <div class="card-text">
                                 <h2>Golden Lab Sketch</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/LXwm9dJLAVx1i1oaA" target="_blank">
-                            <img alt=" " src="images/portrait2commission.jpg">
+                            <img alt="Commissioned graphite drawing of a young girl" src="images/portrait2commission.jpg">
                             <div class="card-text">
                                 <h2>Portrait Commission</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/vA5oWCqTJxz7kway7" target="_blank">
-                            <img alt=" " src="images/watercolorgraphite.jpg">
+                            <img alt="Illustration of hands drawn in graphit wringing out a bouquet of flowers painted with waterolors" src="images/watercolorgraphite.jpg">
                             <div class="card-text">
                                 <h2>Watercolor &amp; graphite</h2></div></a>
                     </div>
@@ -90,25 +90,25 @@
                 <div class="previews">
                     <div class="card">
                         <a href="https://photos.app.goo.gl/TAmiyFwQDUgB9bPPA" target="_blank">
-                            <img alt=" " src="images/graphite.jpg">
+                            <img alt="Graphite drawing of two cats napping" src="images/graphite.jpg">
                             <div class="card-text">
                                 <h2>Graphite</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/wkbuY1Z4sz3W3v1XA" target="_blank">
-                            <img alt=" " src="images/ballpointpen.jpg">
+                            <img alt="Ball-point pen drawing of a diamond ring on a finger" src="images/ballpointpen.jpg">
                             <div class="card-text">
                                 <h2>Ball point pen</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/hWiAXHsoKzvYHanz9" target="_blank">
-                            <img alt=" " src="images/acrylicpaint.jpg">
+                            <img alt="Tiny acrylic painting of one otter smooching another" src="images/acrylicpaint.jpg">
                             <div class="card-text">
                                 <h2>Acrylic paint</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/BjqfUwxNKCbRh8PHA" target="_blank">
-                            <img alt=" " src="images/watercolor.jpg">
+                            <img alt="Watercolor illustration of a young woman" src="images/watercolor.jpg">
                             <div class="card-text">
                                 <h2>Watercolor</h2></div></a>
                     </div>
@@ -118,19 +118,19 @@
                 <div class="previews">
                     <div class="card">
                         <a href="files/theamericandream.pdf" target="_blank">
-                            <img alt="" src="images/americandreamthumbnail.png">
+                            <img alt="Thumnail preview of an infographic discussing The American Dream and wealth in the United States" src="images/americandreamthumbnail.png">
                             <div class="card-text">
                                 <h2>The American Dream</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="images/healthcare.png" target="_blank">
-                            <img alt="" src="images/healthcare.png">
+                            <img alt="Thumbnail preview of an infographic comparing healthcare quality in wealthy, westernized countries" src="images/healthcare.png">
                             <div class="card-text">
                                 <h2>Health Care</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="files/AdvancedRailEnergyStorage.pdf" target="_blank">
-                            <img alt="" src="images/extendeddefinition.png">
+                            <img alt="Thumbnail preview of an extended definition of Advanced Railway Energy Storage" src="images/extendeddefinition.png">
                             <div class="card-text">
                                 <h2>Extended Definition</h2></div></a>
                     </div>
@@ -140,19 +140,19 @@
                 <div class="previews">
                     <div class="card">
                         <a href="https://photos.app.goo.gl/W2oMCXhDfs3kAqfw6" target="_blank">
-                            <img alt="" src="images/nailart.jpg">
+                            <img alt="Preview of nail art featuring floral design" src="images/nailart.jpg">
                             <div class="card-text">
                                 <h2>Nail art</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/yCTyAZ8zyrf8mq1j6" target="_blank">
-                            <img alt="" src="images/crafts.jpg">
+                            <img alt="Preview of a glass mosaic featuring ocean waves" src="images/crafts.jpg">
                             <div class="card-text">
                                 <h2>Misc Crafts</h2></div></a>
                     </div>
                     <div class="card">
                         <a href="https://photos.app.goo.gl/LZjxBLWtoZd1bqHu8" target="_blank">
-                            <img alt="" src="images/ceramics.jpg">
+                            <img alt="Preview of ceramic sculpture with dinosaur scales on its back" src="images/ceramics.jpg">
                             <div class="card-text">
                                 <h2>Ceramics</h2></div></a>
                     </div>
