alt-text, contrast, main-nav
added alt-text to exp pg, improved contrast, fixed broken aria ref

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -13,7 +13,7 @@
     <body>      
         
         <header>
-            <nav class="flex-container" aria-labelledby="primary-navigation">
+            <nav class="flex-container">
                 <a href="index.html">
                     <img class="logo" alt="lowercase j and g in a script typeface" src="images/jgscript.png">
                     </a>
