--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,8 +14,7 @@
         
         <header>
             <nav class="flex-container">
-                 <!--aria-labelledby="primary-navigation"-->
-                <a href="index.html">
+                <a href="index.html" class="logo">
                     <img class="logo" alt="lowercase j and g in a script typeface" src="images/jgscript.png">
                     </a>
                 <ul class="main-nav">
