--- a/portfolio/timetravelermedia.html
+++ b/portfolio/timetravelermedia.html
@@ -13,7 +13,7 @@
     <body>      
         
         <header>
-            <nav class="flex-container" aria-labelledby="primary-navigation">
+            <nav class="flex-container">
                 <a href="index.html">
                     <img class="logo" alt="lowercase j and g in a script typeface" src="images/jgscript.png">
                     </a>
@@ -27,7 +27,7 @@
 
         <div class="container">
             <h1>TTM Website</h1>
-            <h2>Redesiging the website for Time Traveler Media</h2>
+            <h2>Redesigning the website for Time Traveler Media</h2>
             <p>While working together on SLO CORE, Marshall James reached out to me regarding an assessment and rework of his &amp; Laura's company's website, sparking an ongoing working relationship.</p>
             <p>While Marshall and Laura have shifted their priorities to accommodate life changes, I hope to continue working with them when further development becomes more feasible.</p>
             <p>The report below contains an overview and description of the process for this project.</p>
