--- a/portfolio/websiteredesign.html
+++ b/portfolio/websiteredesign.html
@@ -13,7 +13,7 @@
     <body>      
         
         <header>
-            <nav class="flex-container" aria-labelledby="primary-navigation">
+            <nav class="flex-container">
                 <a href="index.html">
                     <img class="logo" alt="lowercase j and g in a script typeface" src="images/jgscript.png">
                     </a>
@@ -30,8 +30,8 @@
             <h2>Project to redesign &amp; code existing website</h2>
             <p>While I’m not strictly speaking thrilled with the way this ended up looking, I really loved the process. I’m passionate about making products and experiences better, and as a fairly regular customer at the time, I was personally motivated to improve such a vital part of the restaurant's customer experience.</p>
             <div class="compare">        
-                <div><img alt=" " src="images/bontempsoriginal.png"><h3>Original</h3></div>
-                <div><img alt=" " src="images/bontempsredesign.png"><h3>Redesign</h3></div></div>
+                <div><img alt="Bon Temps Creole Cafe original website preview" src="images/bontempsoriginal.png"><h3>Original</h3></div>
+                <div><img alt="Bon Temps Creole Cafe website redesign project preview" src="images/bontempsredesign.png"><h3>Redesign</h3></div></div>
             <p><a class="button" href="https://jagrundler.github.io/grc338/redesign-final" target="_blank">View website</a>
             <a class="button" href="https://github.com/jagrundler/jagrundler.github.io/tree/master/grc338/redesign-final" target="_blank">View code</a></p>
         </div>
