--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -13,7 +13,7 @@
     <body>      
         
         <header>
-            <nav class="flex-container" aria-labelledby="primary-navigation">
+            <nav class="flex-container">
                 <a href="index.html">
                     <img class="logo" alt="lowercase j and g in a script typeface" src="images/jgscript.png">
                     </a>
@@ -31,25 +31,25 @@
             <div class="box">
                 <div class="card">
                     <a href="slocore.html">
-                        <img alt="SLO CORE preview and link to project page" src="images/slocorethumbnail.jpg">
+                        <img alt="SLO CORE website preview and link to project page" src="images/slocorethumbnail.jpg">
                         <div class="card-text">
                             <h2>SLO CORE</h2></div></a>
                 </div>
                 <div class="card">
                     <a href="timetravelermedia.html">
-                        <img alt="TTM preview and link to project page" src="images/ttmthumbnail.jpg">
+                        <img alt="Time Traveler Media website redesign preview and link to project page" src="images/ttmthumbnail.jpg">
                         <div class="card-text">
                             <h2>Time Traveler Media</h2></div></a>
                 </div>
                 <div class="card">
                     <a href="firefighterarproject.html">
-                        <img alt="AR Training preview and link to project page" src="images/trainingthumbnail.jpg">
+                        <img alt="Augmented Reality Training app design preview and link to project page" src="images/trainingthumbnail.jpg">
                         <div class="card-text">
                             <h2>AR Training</h2></div></a>
                 </div>
                 <div class="card">
                     <a href="bellocoffeemenu.html">
-                        <img alt="Bello Coffee menus preview and link to project page" src="images/bellothumbnail.jpg">
+                        <img alt="Bello Coffee redesigned menus preview and link to project page" src="images/bellothumbnail.jpg">
                         <div class="card-text">
                             <h2>Bello Coffee Menus</h2></div></a>
                 </div>
@@ -61,19 +61,19 @@
                 </div>
                 <div class="card">
                     <a href="shelterinplace.html">
-                        <img alt=" " src="images/shelterinplacethumbnail.png">
+                        <img alt="Shelter in Place website project preview and link to project page" src="images/shelterinplacethumbnail.png">
                         <div class="card-text">
                             <h2>Shelter in Place Website</h2></div></a>
                 </div>
                 <div class="card">
                     <a href="websiteredesign.html">
-                        <img alt=" " src="images/bontempsredesign.png">
+                        <img alt="Restaurant website redesign project preview and link to project page" src="images/bontempsredesign.png">
                         <div class="card-text">
                             <h2>Website Redesign</h2></div></a>
                 </div>
                 <div class="card">
                     <a href="xploreproject.html">
-                        <img alt=" " src="images/xplorelogothumbnail.png">
+                        <img alt="Xplore project logo design preview and link to project page" src="images/xplorelogothumbnail.png">
                         <div class="card-text">
                             <h2>XPLORE Project</h2></div></a>
                 </div>
