--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
         </header>
 
         <div class="container">
-            <h1><span class="script">Hello!</span></h1>
+            <h1>Hello!</h1>
             <h2>I'm a designer and aspiring Good Human</h2>
             <p>I love the creative and iterative process of making products &amp; experiences optimally accessible, functional, and simplistically elegant.</p>
             <p>If you want to learn more about my background, visit the <a href="about.html">about</a> page.</p>
