--- a/portfolio/websiteredesign.html
+++ b/portfolio/websiteredesign.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="flex-container">
                 <a href="index.html">
-                    <img class="logo" alt="lowercase j and g in a script typeface" src="images/jg-script.svg">
+                    <img class="logo" alt="Uppercase J and G in a script typeface with a link to this site's homepage" src="images/jg-script.svg">
                     </a>
                 <ul class="main-nav">
                     <li><a href="about.html">About</a></li>
@@ -28,8 +28,8 @@
 
         <div class="container">
             <h1>Website Redesign</h1>
-            <h2>Project to redesign &amp; code existing website</h2>
-            <p>While I’m not strictly speaking thrilled with the way this ended up looking, I really loved the process. I’m passionate about making products and experiences better, and as a fairly regular customer at the time, I was personally motivated to improve such a vital part of the restaurant's customer experience.</p>
+            <h2>Project to redesign an existing website in HTML/CSS</h2>
+            <p>While I’m not strictly speaking thrilled with the way this ended up looking, I really loved the process. I’m passionate about optimizing products and experiences, and as a fairly regular customer at the time, I was personally motivated to improve such a vital part of the restaurant's customer experience.</p>
             <div class="compare">        
                 <div><img alt="Bon Temps Creole Cafe original website preview" src="images/bontempsoriginal.png"><h3>Original</h3></div>
                 <div><img alt="Bon Temps Creole Cafe website redesign project preview" src="images/bontempsredesign.png"><h3>Redesign</h3></div></div>
@@ -40,10 +40,10 @@
         <footer>
             <nav class="flex-container">
                 <ul class="footer-nav">
-                    <li><a class="link" href="mailto:jagrundler@gmail.com"><img class="icon" src="icons/email.svg"></a></li>
-                    <li><a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank"><img class="icon" src="icons/linkedin.svg"></a></li>
-                    <li><a class="link" href="https://github.com/jagrundler/jagrundler.github.io/tree/56a098d7578bf7c2153f7bba1464a7c310f4272e/portfolio"><img class="icon" src="icons/site-code.svg"></a></li>
-                    <li><a class="link" href="resume.html"><img class="icon" src="icons/resume.svg"></a></li>
+                    <li><a class="link" href="mailto:jagrundler@gmail.com"><img class="icon" alt="email icon with a link to email me" src="icons/email.svg"></a></li>
+                    <li><a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank"><img class="icon" alt="LinkedIn logo icon with a link to my LinkedIn profile" src="icons/linkedin.svg"></a></li>
+                    <li><a class="link" href="https://github.com/jagrundler/jagrundler.github.io/tree/56a098d7578bf7c2153f7bba1464a7c310f4272e/portfolio"><img class="icon" alt="Code icon with a link to the GitHub repository containing the code and files for this website" src="icons/site-code.svg"></a></li>
+                    <li><a class="link" href="resume.html"><img class="icon" alt="Resume icon with a link to the page containing my resume" src="icons/resume.svg"></a></li>
                 </ul>
             </nav>
         </footer>
