--- a/portfolio/xploreproject.html
+++ b/portfolio/xploreproject.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="flex-container">
                 <a href="index.html">
-                    <img class="logo" alt="lowercase j and g in a script typeface" src="images/jg-script.svg">
+                    <img class="logo" alt="Uppercase J and G in a script typeface with a link to this site's homepage" src="images/jg-script.svg">
                     </a>
                 <ul class="main-nav">
                     <li><a href="about.html">About</a></li>
@@ -29,7 +29,7 @@
         <div class="container">
             <h1>XPLORE Project</h1>
             <h2>Led group project designing &amp; prototyping app for Cal Poly</h2>
-            <p>I had a hand in each aspect of the process because my delegation duties necessitated an understanding of what was going on, what needed to get done, and who was best suited to which roles &amp; contributions. We frequently had  to shift our approach to accommodate shifting product goals as directed by our superiors.</p>
+            <p>I had a hand in each aspect of the process because my delegation duties necessitated an understanding of what was going on, what needed to get done, and who was best suited to which roles &amp; contributions. We frequently had  to shift our approach to accommodate pivoting product goals as directed by our superiors.</p>
             <h3>Collaborative contributions</h3>
             <ul class="list-block">
                 <li><p>bi-weekly summary of accomplishments</p></li>
@@ -49,10 +49,10 @@
         <footer>
             <nav class="flex-container">
                 <ul class="footer-nav">
-                    <li><a class="link" href="mailto:jagrundler@gmail.com"><img class="icon" src="icons/email.svg"></a></li>
-                    <li><a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank"><img class="icon" src="icons/linkedin.svg"></a></li>
-                    <li><a class="link" href="https://github.com/jagrundler/jagrundler.github.io/tree/56a098d7578bf7c2153f7bba1464a7c310f4272e/portfolio"><img class="icon" src="icons/site-code.svg"></a></li>
-                    <li><a class="link" href="resume.html"><img class="icon" src="icons/resume.svg"></a></li>
+                    <li><a class="link" href="mailto:jagrundler@gmail.com"><img class="icon" alt="email icon with a link to email me" src="icons/email.svg"></a></li>
+                    <li><a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank"><img class="icon" alt="LinkedIn logo icon with a link to my LinkedIn profile" src="icons/linkedin.svg"></a></li>
+                    <li><a class="link" href="https://github.com/jagrundler/jagrundler.github.io/tree/56a098d7578bf7c2153f7bba1464a7c310f4272e/portfolio"><img class="icon" alt="Code icon with a link to the GitHub repository containing the code and files for this website" src="icons/site-code.svg"></a></li>
+                    <li><a class="link" href="resume.html"><img class="icon" alt="Resume icon with a link to the page containing my resume" src="icons/resume.svg"></a></li>
                 </ul>
             </nav>
         </footer>
